# treasuryflow

./: .gitignore  README.md
contract_treasury/: .gitignore  Cargo.toml  GAS_OPTIMIZATIONS.md  GAS_OPTIMIZATIONS_SUMMARY.md  OPTIMIZATION_SUMMARY.md  lib.rs  lib_working_on_passet_hub.rs  run_coverage.sh  tarpaulin.toml
contract_treasury_v5/: Cargo.toml  fungibles-demo.rs  lib.rs
contract_treasury_v6/: Cargo.toml  lib.rs
frontend/: components.json  package-lock.json  package.json  papi-config.ts  papi-config.tsx  pnpm-lock.yaml  tailwind.config.ts
frontend/.papi/: polkadot-api.json
frontend/.papi/contracts/: contract_payouts.json  flipper.json  treasury.json  treasury_v6.json  treasuryflow.json
frontend/.papi/descriptors/: package.json
frontend/.papi/metadata/: passethub.scale
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/new-payout/[contractAddress]/: page.tsx
frontend/app/(app)/payouts/: page.tsx
frontend/app/(app)/payouts/add/: page.tsx
frontend/app/(app)/test-deploy/: page.tsx
frontend/app/(app)/treasury/: page.tsx
frontend/app/(app)/treasury/[contractAddress]/: not-found.tsx  page.tsx
frontend/app/create-treasury/: error.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/test/: page.tsx
frontend/components/: add-payout-form.tsx  app-navbar.tsx  app-sidebar.tsx  chart-area-interactive.tsx  create-treasury-form.tsx  dashboard-client.tsx  nav-main.tsx  nav-user.tsx  payouts-content.tsx
frontend/components/account/: account-balance.tsx  view-select-account.tsx  view-select-wallet.tsx  wallet-select.tsx
frontend/components/chain/: chain-info.tsx  chain-select.tsx
frontend/components/layout/: footer.tsx
frontend/components/treasury/: treasury-balance.tsx  treasury-card-balance.tsx  treasury-payouts.tsx
frontend/components/ui/: button.tsx  copy-button.tsx  quick-access-button.tsx  theme-toggle.tsx
frontend/convex/: schema.ts  treasuries.ts
frontend/convex/_generated/: api.d.ts
frontend/hooks/: use-account-balance.ts  use-account-balance.tsx  use-block-number.ts  use-deploy-treasury.ts  use-treasury-contract.ts
frontend/lib/: deploy-treasury.ts  format-balance.ts  treasury-contract-service.ts  utils.ts
frontend/providers/: lightclient-api-provider.tsx  providers.tsx  rpc-api-provider.tsx  theme-provider.tsx
frontend/public/: flipper.contract  flipper.json  flipper.polkavm  treasury.contract  treasury.json  treasury.polkavm  treasury_v6.polkavm  treasuryflow.polkavm
frontend/styles/: globals.css
pop_contract/: Cargo.toml
