[package]
name = "treasury_v6"
version = "0.1.0"
authors = ["Niklas Jurij Plessing <niklas@eedee.net>"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/use-ink/ink", branch = "master", default-features = false, features = ["unstable-hostfn"] }
scale-info = { version = "2.11.0", default-features = false }
parity-scale-codec = { version = "3.6.6", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { git = "https://github.com/use-ink/ink", branch = "master" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
