[package]
name = "pop_contract"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale-info = { version = "2.11.0", default-features = false }
parity-scale-codec = { version = "3.6.6", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { git = "https://github.com/use-ink/ink", branch = "master" }
serde_json = "1.0.114"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "parity-scale-codec/std",
]
ink-as-dependency = []
e2e-tests = []
